--- a/src/app/modules/search/components/list/list.component.scss
+++ b/src/app/modules/search/components/list/list.component.scss
@@ -39,6 +39,8 @@
             flex: 1 1 auto;
             padding: 1rem;
             overflow-y: hidden;
+            display: flex;
+            flex-direction: column;
 
             .list-content__results__summary {
                 display: flex;
@@ -85,7 +87,11 @@
 
     }
 }
-
+.sticky-container{
+    position: sticky;
+    top: -1rem;
+    align-self: flex-start;
+}
 
 @media(max-width:480px) {
     .list-content__results {
@@ -101,7 +107,7 @@
             .list-content__results__filter-button{
                 position: absolute;
                 right: 0;
-                margin-top: 1.8rem;
+                margin-top: 2.1rem;
             }
         }
     }
