--- a/src/app/modules/cards/components/repo-card/repo-card.component.html
+++ b/src/app/modules/cards/components/repo-card/repo-card.component.html
@@ -1,36 +1,35 @@
 <article class="repo-card">
     <div class="card">
         <div class="card-block">
-            <div class="card-title" i18n>
-                {{data?.name | truncate: ['20']}}
+            <div class="card-title truncate-1" i18n>
+                {{data?.name}}
             </div>
             <div class="card-text">
-                <p class="p1" *ngIf="data?.description" i18n>{{data?.description | truncate: ['70']}}</p>
+                <p class="p1 card-text__description truncate-4" *ngIf="data?.description" i18n>{{data?.description}}</p>
 
-                <span class="label language" *ngIf="data?.language" i18n>{{data?.language}}</span>
-                <div class="status">
-                    <span *ngIf="data?.stargazers_count" role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs"  i18n>
-                        <clr-icon shape="star" class="is-solid"></clr-icon>
-                        {{data?.stargazers_count}}
-                        <span class="tooltip-content">Stargazers</span>
-                    </span>
-                    <span *ngIf="data?.forks" role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs"  i18n>
-                        <clr-icon shape="share" class="fork-icon"></clr-icon>
-                        {{data?.forks}}
-                        <span class="tooltip-content">Forks</span>
-                    </span>
-                    <span *ngIf="data?.watchers_count" role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs"  i18n>
-                        <clr-icon shape="eye" class="is-solid"></clr-icon>
-                        {{data?.watchers_count}}
-                        <span class="tooltip-content">Watchers  </span>
-                    </span>
+                <div class="card-text__more-info">
+                    <span class="label language" *ngIf="data?.language" i18n>{{data?.language}}</span>
+                    <div class="status">
+                        <span *ngIf="data?.stargazers_count" data-tooltip="Stargazers" class="tooltip-right" i18n>
+                            <clr-icon shape="star" class="is-solid"></clr-icon>
+                            {{data?.stargazers_count}}
+                        </span>
+                        <span *ngIf="data?.forks" data-tooltip="Forks" i18n>
+                            <clr-icon shape="share" class="fork-icon"></clr-icon>
+                            {{data?.forks}}
+                        </span>
+                        <span *ngIf="data?.watchers_count" data-tooltip="Watchers" i18n>
+                            <clr-icon shape="eye" class="is-solid"></clr-icon>
+                            {{data?.watchers_count}}
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="card-footer">
             <a [href]="data?.url" target="_blank" class="btn btn-link" i18n>KNOW MORE
                 <clr-icon shape="help-info"></clr-icon>
-                
+
             </a>
         </div>
     </div>
