--- a/src/app/modules/cards/components/repo-card/repo-card.component.scss
+++ b/src/app/modules/cards/components/repo-card/repo-card.component.scss
@@ -12,6 +12,9 @@
                 .card-text__more-info{
                     bottom: 3.0rem;
                     position: absolute;
+                    .update-date{
+                        margin-left: 0.1rem;
+                    }
                 }
                 .language{
                     margin-top: 1rem;
