--- a/src/app/modules/cards/components/repo-landscape-card/repo-landscape-card.component.scss
+++ b/src/app/modules/cards/components/repo-landscape-card/repo-landscape-card.component.scss
@@ -17,6 +17,9 @@
                     font-size: 0.583333rem;
                     color: #575757;
                     padding-top: 0.1rem;
+                    .update-date{
+                        margin-right: 0.6rem;
+                    }
                     span{
                         margin-right: 0.6rem;
                     }    
