--- a/src/app/modules/search/components/filter/filter.component.html
+++ b/src/app/modules/search/components/filter/filter.component.html
@@ -22,7 +22,7 @@
         </clr-radio-wrapper>
         <clr-radio-wrapper>
             <input type="radio" clrRadio value="forks" name="sort_by_options-{{instanceCounter}}" (change)="updateSortBy('forks', 'number')" />
-            <label i18n>Fork Count</label>
+            <label i18n>Total Forks</label>
         </clr-radio-wrapper>
         <clr-radio-wrapper>
             <input type="radio" clrRadio value="watchers_count" name="sort_by_options-{{instanceCounter}}"
